--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,9 @@ a {
   background-color: #222;
   height: 7.5rem;
   line-height: 7.5rem;
-  padding: 0.5rem 15rem;
+  padding: 0.5rem 20rem;
   position: fixed;
-  width: 80.8%;
+  width: 73.8%;
   z-index: 20;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -163,7 +163,7 @@ a {
 
 main {
   margin-top: 8.5rem;
-  padding: 0 15rem;
+  padding: 0 20rem;
 }
 
 .ad {
@@ -253,4 +253,24 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 567px) {
+  .blog .blog_text h2 {
+    height: 50px;
+    font-size: 2rem;
+  }
+
+  .ad {
+    margin: 1rem auto;
+    height: 10rem;
+  }
+
+  .ad a img {
+    object-fit: contain;
+  }
+
+  .blog .blog_img {
+    height: 20rem;
+  }
 }
