--- a/styles.css
+++ b/styles.css
@@ -60,17 +60,16 @@ a {
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
+  box-sizing: border-box;
 }
 
 .header {
   background-color: #222;
   height: 7.5rem;
   line-height: 7.5rem;
-  padding: 0.5rem 20rem;
-  position: fixed;
-  width: 73.8%;
-  z-index: 20;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  position: fixed;
 }
 
 .navigation {
@@ -78,12 +77,12 @@ a {
   height: 100%;
 }
 
-.nav_list li {
-  list-style-type: none;
+.nav_list {
+  margin-right: 20rem;
 }
 
-.nav_list li:not(:last-child) {
-  margin-right: 0.5rem;
+.nav_list li {
+  list-style-type: none;
 }
 
 .nav_list li a {
@@ -104,12 +103,12 @@ a {
   text-decoration: none;
   color: white;
   font-size: 3rem;
+  margin-left: 20rem;
 }
 
 .hamburger {
   color: white;
   display: none;
-  margin-right: 1.5rem;
 }
 
 @media (max-width: 567px) {
@@ -160,10 +159,8 @@ a {
 }
 
 /* Main */
-
 main {
   margin-top: 8.5rem;
-  padding: 0 20rem;
 }
 
 .ad {
@@ -183,6 +180,7 @@ main {
 /* Content */
 #content {
   min-height: 70vh;
+  margin: 0 20rem;
 }
 
 .blog_layout {
@@ -217,7 +215,7 @@ main {
 
 .blog .blog_text h2 {
   margin-bottom: 1rem;
-  height: 60px;
+  height: auto;
 }
 
 .blog .blog_text h2 a {
@@ -255,9 +253,35 @@ main {
   object-fit: cover;
 }
 
+@media (max-width: 776px) {
+  .nav_list {
+    margin-right: 9rem;
+  }
+
+  .logo {
+    margin-left: 9rem;
+  }
+
+  #content {
+    margin: 0 10rem;
+  }
+}
+
 @media (max-width: 567px) {
+  .hamburger {
+    margin-right: 3rem;
+  }
+
+  .logo {
+    margin-left: 3rem;
+  }
+
+  .blog {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+
   .blog .blog_text h2 {
-    height: 50px;
+    height: auto;
     font-size: 2rem;
   }
 
@@ -272,5 +296,19 @@ main {
 
   .blog .blog_img {
     height: 20rem;
+  }
+}
+
+@media (max-width: 470px) {
+  .hamburger {
+    margin-right: 2rem;
+  }
+
+  .logo {
+    margin-left: 2rem;
+  }
+
+  #content {
+    margin: 0 3rem;
   }
 }
