--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,44 @@ main {
     margin: 0 3rem;
   }
 }
+
+.load_btn {
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.load {
+  outline: none;
+  border: none;
+  background-color: var(--primary);
+  color: white;
+  padding: 1rem 2rem;
+  font-size: 1.8rem;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.load:hover {
+  background-color: black;
+}
+
+.footer {
+  background-color: white;
+  padding: 2rem;
+}
+
+.footer .layout {
+  max-width: 30rem;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.footer p {
+  margin-right: 3rem;
+}
+
+.footer a {
+  font-size: 2.5rem;
+  margin-right: 1rem;
+}
