--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ main {
 .blog {
   background-color: white;
   transition: all 300ms ease-out;
+  display: none;
 }
 
 .blog:hover {
@@ -471,40 +472,6 @@ main {
     height: 25rem;
     margin: 1rem 0;
   }
-}
-
-/* Youtube and Vimeo */
-.iframe_container {
-  padding-bottom: 2rem;
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 40rem;
-  justify-content: center;
-}
-
-.iframe_container > iframe {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-@media (max-width: 768px) {
-  .iframe_container {
-    height: 25rem;
-  }
-}
-
-@media (max-width: 567px) {
-  .iframe_container {
-    height: 20rem;
-  }
-}
-
-.color {
-  color: var(--primary);
 }
 
 /* Contact Us Form */
